force-app/main/default/objects/Mapping_Definition__c/Mapping_Definition__c.object-meta.xml
<CustomObject>
    <description>Admin-managed field-mapping configuration. Defines a source object to target object mapping used at runtime.</description>
    <label>Mapping Definition</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Definitions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>