force-app/main/default/objects/Mapping_Definition__c/fields/Match_Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Match_Target_Field__c</fullName>
    <defaultValue>&quot;lfemr__Source_System_Id__c&quot;</defaultValue>
    <description>Target field used to find an existing record for upsert.</description>
    <label>Match Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>