force-app/main/default/objects/Mapping_Definition__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>API name of the source object to map FROM (e.g. Contact, or lfemr__Intake__c). Free text — resolved at runtime.</description>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>