force-app/main/default/objects/Mapping_Definition__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <defaultValue>&quot;lfemr__Patient__c&quot;</defaultValue>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>