force-app/main/default/objects/Mapping_Definition__c/listViews/Active_Mappings.listView-meta.xml
<ListView>
    <fullName>Active_Mappings</fullName>
    <columns>NAME</columns>
    <columns>Source_Object__c</columns>
    <columns>Target_Object__c</columns>
    <columns>Match_Target_Field__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Mappings</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>