force-app/main/default/objects/Mapping_Definition__c/listViews/All_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Mappings</fullName>
    <columns>NAME</columns>
    <columns>Source_Object__c</columns>
    <columns>Target_Object__c</columns>
    <columns>Match_Target_Field__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>